tests/native-lib/fail/struct_not_extern_c.stderr
error: Undefined Behavior: passing a non-#[repr(C)] struct over FFI: PassMe
  --> tests/native-lib/fail/struct_not_extern_c.rs:LL:CC
   |
LL |     unsafe { pass_struct(pass_me) };
   |              ^^^^^^^^^^^^^^^^^^^^ Undefined Behavior occurred here
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: BACKTRACE:
   = note: inside `main` at tests/native-lib/fail/struct_not_extern_c.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

